ie11 bug fix, overflow hidden was cropping the pickers with fixed position

--- a/src/color.less
+++ b/src/color.less
@@ -34,13 +34,12 @@
 
 		&--color- {
 			&WHITE_BLACK {
-				border-color: @color-WHITE_BLACK-foreground-1;
-				background-color: @color-WHITE_BLACK-background-1;
-
 				.dyna-ui-label {
-
+					border-color: @color-WHITE_BLACK-foreground-1;
+					background-color: @color-WHITE_BLACK-background-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-WHITE_BLACK-foreground-1;
 					background-color: @color-WHITE_BLACK-white-1;
 					.dyna-ui-field-wrapper-control-container {
 					}
@@ -58,15 +57,13 @@
 				}
 			}
 			&GREY_WHITE {
-				border-color: @color-GREY_WHITE-foreground-1;
-				background-color: @color-GREY_WHITE-background-2;
-
 				.dyna-ui-label {
 					border-color: @color-GREY_WHITE-foreground-1;
 					background-color: @color-GREY_WHITE-background-1;
 					color: @color-GREY_WHITE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-GREY_WHITE-foreground-1;
 					background-color: @color-GREY_WHITE-white-1;
 					color: @color-GREY_WHITE-background-1;
 					.dyna-ui-field-wrapper-control-container {
@@ -85,14 +82,14 @@
 				}
 			}
 			&WHITE_RED {
-				border-color: @color-WHITE_RED-foreground-1;
-
 				.dyna-ui-label {
-					border-color: @color-WHITE_RED-foreground-2;
+					border-color: @color-WHITE_RED-foreground-1;
+					border-right-color: @color-WHITE_RED-foreground-2;
 					color: @color-WHITE_RED-foreground-1;
 					background-color: @color-WHITE_RED-background-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-WHITE_RED-foreground-1;
 					background-color: @color-WHITE_RED-white-1;
 					.dyna-ui-field-wrapper-control-container {
 					}
@@ -110,14 +107,14 @@
 				}
 			}
 			&RED_WHITE {
-				border-color: @color-RED_WHITE-background-1;
-
 				.dyna-ui-label {
-					border-color: @color-RED_WHITE-background-2;
+					border-color: @color-RED_WHITE-background-1;
+					border-right-color: @color-RED_WHITE-background-2;
 					color: @color-RED_WHITE-foreground-1;
 					background-color: @color-RED_WHITE-background-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-RED_WHITE-background-1;
 					background-color: @color-RED_WHITE-white-1;
 					.dyna-ui-field-wrapper-control-container {
 					}
@@ -135,14 +132,14 @@
 				}
 			}
 			&BLACK_WHITE {
-				border-color: @color-BLACK_WHITE-background-1;
-
 				.dyna-ui-label {
-					border-color: @color-BLACK_WHITE-background-3;
+					border-color: @color-BLACK_WHITE-background-1;
+					border-right-color: @color-BLACK_WHITE-background-3;
 					color: @color-BLACK_WHITE-foreground-1;
 					background-color: @color-BLACK_WHITE-background-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-BLACK_WHITE-background-1;
 					background-color: @color-BLACK_WHITE-white-1;
 					.dyna-ui-field-wrapper-control-container {
 					}
@@ -160,12 +157,12 @@
 				}
 			}
 			&TRANSPARENT_WHITE {
-				border-color: @color-BLACK_WHITE-foreground-1;
-
 				.dyna-ui-label {
+					border-color: @color-BLACK_WHITE-foreground-1;
 					color: @color-BLACK_WHITE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-BLACK_WHITE-foreground-1;
 					color: @color-BLACK_WHITE-foreground-1;
 					background-color: transparent;
 					.dyna-ui-field-wrapper-control-container {
@@ -184,12 +181,12 @@
 				}
 			}
 			&TRANSPARENT_ORANGE {
-				border-color: @color-BLACK_ORANGE-foreground-1;
-
 				.dyna-ui-label {
+					border-color: @color-BLACK_ORANGE-foreground-1;
 					color: @color-BLACK_ORANGE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-BLACK_ORANGE-foreground-1;
 					color: @color-BLACK_ORANGE-foreground-1;
 					background-color: transparent;
 					.dyna-ui-field-wrapper-control-container {
@@ -208,14 +205,14 @@
 				}
 			}
 			&ORANGE_WHITE {
-				border-color: @color-ORANGE_WHITE-background-1;
-
 				.dyna-ui-label {
-					border-color: @color-ORANGE_WHITE-background-3;
+					border-color: @color-ORANGE_WHITE-background-1;
+					border-right-color: @color-ORANGE_WHITE-background-3;
 					background-color: @color-ORANGE_WHITE-background-1;
 					color: @color-ORANGE_WHITE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-ORANGE_WHITE-background-1;
 					background-color: @color-ORANGE_WHITE-white-1;
 					color: @color-ORANGE_WHITE-black-1;
 					.dyna-ui-field-wrapper-control-container {
@@ -236,14 +233,14 @@
 				}
 			}
 			&BLACK_ORANGE {
-				border-color: @color-BLACK_ORANGE-background-1;
-
 				.dyna-ui-label {
-					border-color: @color-BLACK_ORANGE-background-3;
+					border-color: @color-BLACK_ORANGE-background-1;
+					border-right-color: @color-BLACK_ORANGE-background-3;
 					background-color: @color-BLACK_ORANGE-background-1;
 					color: @color-BLACK_ORANGE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-BLACK_ORANGE-background-1;
 					background-color: @color-BLACK_ORANGE-foreground-1;
 					color: @color-BLACK_ORANGE-black-1;
 					.dyna-ui-field-wrapper-control-container {
@@ -264,14 +261,14 @@
 				}
 			}
 			&WHITE_ORANGE {
-				border-color: @color-WHITE_ORANGE-background-1;
-
 				.dyna-ui-label {
-					border-color: @color-WHITE_ORANGE-background-3;
+					border-color: @color-WHITE_ORANGE-background-1;
+					border-right-color: @color-WHITE_ORANGE-background-3;
 					background-color: @color-WHITE_ORANGE-background-1;
 					color: @color-WHITE_ORANGE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
+					border-color: @color-WHITE_ORANGE-background-1;
 					background-color: @color-WHITE_ORANGE-white-1;
 					color: @color-WHITE_ORANGE-black-1;
 					.dyna-ui-field-wrapper-control-container {
@@ -292,15 +289,13 @@
 				}
 			}
 			&WHITE_ORANGE {
-				border-color: @color-WHITE_ORANGE-foreground-1;
-
 				.dyna-ui-label {
 					border-color: @color-WHITE_ORANGE-foreground-1;
 					background-color: @color-WHITE_ORANGE-background-1;
 					color: @color-WHITE_ORANGE-foreground-1;
 				}
 				.dyna-ui-field-wrapper-container {
-					border-color: @color-WHITE_ORANGE-foreground-3;
+					border-color: @color-WHITE_ORANGE-foreground-1;
 					background-color: @color-WHITE_ORANGE-white-1;
 					color: @color-WHITE_ORANGE-black-1;
 					.dyna-ui-field-wrapper-control-container {
